--- a/pom.xml
+++ b/pom.xml
@@ -62,5 +62,15 @@
       <artifactId>slf4j-simple</artifactId>
       <version>2.0.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.mongodb</groupId>
+      <artifactId>mongodb-driver</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
   </dependencies>
 </project>
